49
================

03/12/24 Added ability to rename HTML templates #1582
02/12/24 Added revert button to HTML templates #1581
02/12/24 Permission to control access to the timeline #1583
02/12/24 Bug: No view diary note permission hides timeline and overview 
02/12/24 Only choose the default email type if it exists #1546
02/12/24 Updated animalview template to "make nicer" #1210
01/12/24 Add ustyle/utemplate parameter to animalview #1580
29/11/24 Modified update_anonymise_personal_data function to include removal of address change logs #1578
28/11/24 Added prefix to address change log to allow the data to be managed for GDPR compliance #1578
28/11/24 html_permfoster_animals service method
27/11/24 Added option to change default log type for logging emails #1546
27/11/24 Added option to change default for logging emails #1546
27/11/24 Added option for diary tasks to generate diary notes addressed to the user that executed the task #1565
26/11/24 Optimise update_person_from_form to save a query after #1556
26/11/24 Option to record person address changes in the log #1556
25/11/24 Option to open find animal/person in a new tab #1571
23/11/24 Regenerate the secret for a user account when 2FA is disabled
19/11/24 24Pet: Enable for Canadian locales
19/11/24 PetLink: include transfer message on publishing record
18/11/24 shelterview: Include location totals on location and unit #1572
18/11/24 Add "additionalfield contains" option to querybuilder
15/11/24 mobile photo uploader: gallery can upload multiple images #1564
13/11/24 Emblem to indicate animal is future intake
13/11/24 MyPet: fix date format and address fields
11/11/24 Fix animal observations to use a delimiter with fewer collisions ^^
11/11/24 Some share links broken with extra &
08/11/24 Optimise get_animal_data when calling animalview through the service
06/11/24 Fix adoption coordinator not updating from bulk change animal
06/11/24 New microchip registry "MyPet" for UK and NI