@@ -1,6 +1,7 @@
 49
 ================
 
+03/12/24 Refactor csvimport* screens #1103
 03/12/24 Added ability to rename HTML templates #1582
 02/12/24 Added revert button to HTML templates #1581
 02/12/24 Permission to control access to the timeline #1583
